1.21 init